# cargo-readme

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.tpl  default.nix
.circleci/: config.yml
.claude/: CLAUDE.md  settings.json
.claude/skills/publish/: SKILL.md
.claude/skills/review/: SKILL.md  architect-agent.md  conservative-agent.md  security-agent.md  testing-agent.md
.claude/skills/update-deps/: SKILL.md
.github/workflows/: main.yml  release.yml
docs/uml/: class.puml  sequence.puml
src/: .main.rs.swp  cargo_info.rs  doc.rs  helper.rs  lib.rs  main.rs  manifest.rs  process.rs  template.rs  test_macros.rs
src/config/: badges.rs  manifest.rs  mod.rs  project.rs
src/doc/: cargo_info.rs  extract.rs  extractor.rs  load.rs  mod.rs  modifier.rs  template.rs  transform.rs
src/readme/: extract.rs  load.rs  mod.rs  process.rs  template.rs  transform.rs
test-projects/no-lib-no-main/: Cargo.toml
tests/: alternate-input.rs  alternate-input.t  alternate-template.rs  alternate-template.t  append-license.rs  badges-missing-attr.rs  badges.rs  default-behavior.rs  default-behavior.t  entrypoint-resolution.rs  missing-badges-license.rs  multiline-doc.rs  multiple-bin-fail.rs  multiple-bin-fail.t  no-comment-extraction.rs  no-entrypoint-fail.rs  no-entrypoint-fail.t  no-template.rs  no-template.t  project-with-version.rs  travis-com.rs  workspace-inheritance.rs  workspace.rs
tests/badges/: Cargo.toml  README.tpl
tests/badges-missing-attr/: Cargo.toml
tests/badges/src/: lib.rs
tests/common/: mod.rs
tests/entrypoint-resolution/cargo-bin/: Cargo.toml
tests/entrypoint-resolution/cargo-lib/: Cargo.toml
tests/entrypoint-resolution/cargo-lib/src/: alt.rs
tests/entrypoint-resolution/lib/src/: lib.rs  main.rs
tests/missing-badges-license/: Cargo.toml
tests/multiple-bin-fail/: Cargo.toml
tests/no-entrypoint-fail/: Cargo.toml
tests/no-lib-no-main/: Cargo.toml
tests/project-with-version/: Cargo.toml  README.tpl
tests/project-with-version/src/: lib.rs
tests/readme-test/: Cargo.toml  OTHER.tpl  README.tpl
tests/readme-test/src/: lib.rs  other.rs
tests/test-crate/src/: lib.rs
tests/test-project/: Cargo.toml  NOTITLE.tpl  OTHER.tpl  README.rustdoc.md  README.tpl
tests/test-project/src/: lib.rs  multiline.rs
tests/travis-com/: Cargo.toml
tests/workspace/: Cargo.toml
tests/workspace-inheritance/: Cargo.toml
tests/workspace-inheritance/member/: Cargo.toml  README.tpl
tests/workspace-inheritance/member/src/: lib.rs
tests/workspace/crate1/: Cargo.toml
tests/workspace/crate2/: Cargo.toml
tests/workspace/crate2/src/: lib.rs
