[package]
name = "readme-test"
version = "0.1.0"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"

[badges]
appveyor = { repository = "cargo-readme/test" }
circle-ci = { repository = "cargo-readme/test" }
gitlab = { repository = "cargo-readme/test" }
travis-ci = { repository = "cargo-readme/test" }
codecov = { repository = "cargo-readme/test" }
coveralls = { repository = "cargo-readme/test" }
is-it-maintained-issue-resolution = { repository = "cargo-readme/test" }
is-it-maintained-open-issues = { repository = "cargo-readme/test" }